--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,11 @@ api_version: 1
 threadsafe: true
 
 handlers:
-  
+
+- url: /favicon.ico
+  static_files: favicon.ico
+  upload: favicon.ico
+
 - url: /images
   static_dir: images
   secure: always
