refactored file structure, made app more responsive, added tests

--- a/app.yaml
+++ b/app.yaml
@@ -18,8 +18,12 @@ handlers:
   static_dir: components
   secure: always
 
-- url: /vendor
-  static_dir: vendor
+- url: /elements
+  static_dir: elements
+  secure: always
+
+- url: /lib
+  static_dir: lib
   secure: always
 
 - url: /tests
