--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,14 @@ handlers:
   static_dir: components
   secure: always
 
+- url: /elements
+  static_dir: elements
+  secure: always
+
+- url: /lib
+  static_dir: lib
+  secure: always
+
 - url: /vendor
   static_dir: vendor
   secure: always
